add error prone and fix some potential bugs (#220)